sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:15: error: value ot is not a member of Int
    for (j <- fin ot debut){
                  ^